use flatpak run with the new --no-desktop flag
Signed-off-by: Niv Sardi <xaiki@evilgiggle.com>

--- a/debian/eos-kalite-systemd-helper.service
+++ b/debian/eos-kalite-systemd-helper.service
@@ -2,7 +2,7 @@
 Description=KA Lite Server
 
 [Service]
-ExecStart=/usr/bin/flatpak run --env="LISTEN_PID=true" --command="kalite" org.learningequality.kalite start --foreground
+ExecStart=/usr/bin/flatpak run --no-desktop --env="LISTEN_PID=true" --command="kalite" org.learningequality.kalite start --foreground
 User=kalite
 
 PrivateTmp=yes
