Specify an unit type 'simple' and a restart policy (on failure)
https://phabricator.endlessm.com/T4489

--- a/debian/eos-kalite-systemd-helper.service
+++ b/debian/eos-kalite-systemd-helper.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=KA Lite Server
-ConditionPathExists=/var/lib/flatpak/app/org.learningequality.kalite/
+ConditionPathExists=/var/lib/flatpak/app/org.learningequality.kalite
 
 [Service]
+Type=simple
 ExecStart=/usr/bin/flatpak run --no-desktop --env="LISTEN_PID=true" --command="kalite" org.learningequality.kalite start --foreground
 User=kalite
 
 PrivateTmp=yes
+Restart=on-failure
