Don't explicitly set the LISTEN_PID environment variable
This would be wrong, since LISTEN_PID is supposed to contain an integer
with the PID of the process spawned by systemd, and unnecessary, since
systemd will automatically set that for us when socket-activated.

https://phabricator.endlessm.com/T4489

--- a/debian/eos-kalite-systemd-helper.service
+++ b/debian/eos-kalite-systemd-helper.service
@@ -4,7 +4,7 @@ ConditionPathExists=/var/lib/flatpak/app/org.learningequality.kalite
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/flatpak run --no-desktop --env="LISTEN_PID=true" --command="kalite" org.learningequality.kalite start --foreground
+ExecStart=/usr/bin/flatpak run --no-desktop --command="kalite" org.learningequality.kalite start --foreground
 User=kalite
 
 PrivateTmp=yes
