--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,5 @@ Vcs-Git: git://github.com/endlessm/eos-kalite-systemd-helper.git
 Package: eos-kalite-system-helper
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: A simple helper to activate a flatpak packaged kalite
- Used internally at endless
+Description: A simple helper to integrate the KA Lite flatpak with the OS
+ Used internally at Endless
