Renamed ID of the flatpak to follow usual convention
It should be 'KALite', not 'kalite'.

--- a/debian/eos-kalite-system-helper.service
+++ b/debian/eos-kalite-system-helper.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=KA Lite Server
-ConditionPathExists=/var/lib/flatpak/app/org.learningequality.kalite
+ConditionPathExists=/var/lib/flatpak/app/org.learningequality.KALite
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/flatpak run --no-desktop --command="kalite" org.learningequality.kalite start --foreground
+ExecStart=/usr/bin/flatpak run --no-desktop --command="kalite" org.learningequality.KALite start --foreground
 User=kalite
 
 PrivateTmp=yes
